@@ -1,6 +1,7 @@
 Change log next version
 -----------------------
 * You can now use all kinds of Collection instances (and not only List's as in the previous versions) as multi-value parameters (issue 165).
+* The specified content-type header is no longer ignored when specifiying binary request body content (issue 167).
 
 Change log 1.6.1 (2012-04-05)
 -----------------------------
